<resources>
    <string name="app_name">VolleyInfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Pra">Все о волейболе</string>
    <string name="Setter">Связующий</string>
    <string name="Doigr">Доигровщик</string>
    <string name="Centr">Центральный блокирующий</string>
    <string name="Dia">Диагональный</string>
    <string name="Lib">Либеро</string>
    <string name="Osnov">Волейбол-популярный вид спорта,в котором соревнуются между собой две команды. В каждой из них по 6 человек + 1 либеро.
Игра проходит до 25 очков. Очко проигрывает та команда,у которой мяч касается пола,в пределах ее площадки.

Высота мужской сетки составляет 243 см.

Высота женской сетки составляет 220 см.

Сама площадка же составляет 18 м на 9 м,а одна сторона составляет 9 м на 9 м.

На команду дается три касания,если команда не сможет перебить мяч на сторону противника за эти три касания,то она проигрывает очко. Три касания возобновляются,когда игрок соперника касается мяча.</string>
    <string name="Perehod">По правилам переходы в волейболе осуществляются каждый раз после того, как выигрывают розыгрыш, совершенный соперниками. Если команда выигрывает подачу, участники зонами не меняются, остаются на старых местах.</string>
    <string name="Podacha">Сегодня волейболисты используют подачу как средство нападения, причем сильнейшие игроки владеют подачей в совершенстве. Технически подача выглядит следующим образом: игрок располагаясь за линией площадки, подбрасывает мяч и ударом руки отправляет его на площадку противника.
    На выполнение подачи даётся 8 секунд,если игрок подает в сетку,аут или наступает на линию площадки,то подача считается не поданной и очко идет сопернику.</string>
    <string name="Zastup">Заступ средней линии:Считается ошибкой,если нога полностью перешла на сторону соперника,если игрок только наступил на неё,то заступ не считается.
    Заступ при подаче:Если при подаче игрок наступает на линию,то это считается ошибкой.
    Заступ при нападении с задней линии:Если при нападении с задней линии игрок наступает на линию,то это считается ошибкой.</string>
    <string name="Setka">Любое касание сетки считается ошибкой,не считая касание сетки,когда мяч уже упал на одну из сторон.</string>
    <string name="Zamena">Замена — это акт, при котором игрок, после того как секретарь сделал запись, вступает в игру на место другого игрока, который должен покинуть площадку (кроме Либеро). Замена требует разрешения судьи.Игрока,который вышел на замену,может заменить только тот,вместо кого вышел этот игрок. </string>

    <string name="S_Obz">Связующий -это мозг команды,который снабжает передачами нападающих.Он дает передачу после приема своей команды и всегда совершает второе касание.Он должен подстраиваться под игроков,их темп разбега,убыстрять или наоборт,дать передачу повыше,все это должен понимать и чувствовать связующий.</string>
    <string name="S_Nah">Связующий всегда играет либо во второй,либо в первой зоне,не зависимо от того,где он стоит по расстановке.</string>
    <string name="S_Pered">Связующий должен всегда следить за игрок и стороной соперника,ведь в зависимости от нахождение противников на площадке,он выбирает,кому дать передачу,скинуть.Например,если игрок противника во второй зоне побежал доставать мяч и его сейчас нет,то логично будет дать передачу в четвертую зону,ведь там будет один блок.</string>
    <string name="S_Priem">Связующий не учавствует в приеме подачи,исключая редкие случаи,когда мяч падает от сетка прямо вам в руки.Но он играет в защите в первой зоне,если сейчас не на первой линии.</string>
    <string name="S_Nap">Связующий не учавствует в нападении,но он может скинуть сам или ударить со второго касания,если находится на первой линии.Скидка выполняется в основном левой рукой или двумя рука,но также вашу скидку не должны ожидать,а она должна быть неожиданной и резкой,чтобы этот мяч не достали.</string>
    <string name="S_Block">Связующий играет на блоке во второй зоне,блокируя вражеского доигровщика,по возможности помогает первому темпу.</string>

    <string name="Do_Obz">Доигровщик - игрок,который учавствует в приеме и нападение.На площадке находятся два доигровщика,один на передней линии,а другой на задней.Он должен иметь неплохой прием подачи и нападать с самых сложным мячей.</string>
    <string name="Do_Nah">Доигровщик находится в четвертой или шестой зоне,взависимости от того,на какой линии он находится.Так же он может отыграть и во второй зоне,если диаганальный сейчас находится в четвертой зоне.</string>
    <string name="Do_Priem">Для доигровщика прием очень важен,даже нападение не так важно,как прием подачи.Он должен обладать неплохим приемом любой подачи.В защите же он играет на линии в конце шестой зоны,страхуя отскок от блока.Если он находится в четвертой зоне,то он играет в защите "свободным от блока", это значит,что если нападает не его игрок,а другой например доигровщик противника,то он должен сместиться на страховку скидки.</string>
    <string name="Do_Nap">Доигровщик в основном нападает с самых сложных мячей,когда нет доводки.Его направление атаки это удар в линии и по диаганале,так же он должен уметь отыграться от блока,ведь когда на вас висит два блока,обойти их не всегда удается,поэтому ударом "по пальцам" вы должны владеть,если хотите стать доигровщиком.</string>
    <string name="Do_Block">Доигровщик играет на блоке в четвертой зоне,блокуя диаганального и связующего соперника,по возможности помогает первому  темпу.</string>

    <string name="Ce_Obz">Центральный блокирующий - игрок,который отвечает за блок,который блокирует как игрока первого темпа,так и четвертую и вторую зону.Обычно эту роль занимают самые высокие игроки,ведь им не нужно высоко прыгать,чтобы был высокий блок.</string>
    <string name="Ce_Nah">Центральный блокирующий играет только на первой линии,после того,как он вышел на подачу ,и команда проиграла очко,он меняется с либеро на прием подачи.После того,как либеро прошел всю заднюю линию,центральный блокирующий выходит снова. </string>
    <string name="Ce_Priem">Центральный блокирующий не учавствует в приеме подачи,играет в защите в пятой зоне после того,как подаст подачу.</string>
    <string name="Ce_Nap">Центральный блокирующий или же игрок первого темпа нападает только с третьей зоны.Его атака называется взлет,скоростная атака,которая осуществляется при хорошей доводке,так же ее очень сложно остановить.</string>
    <string name="Ce_Block">Центральный блокирующий должен успевать везде,блокировать своего игрока,игрока четвертой и второй зоны.Для этого он должен следить за связующим и анализировать игру.Например если диаганальный противника достал мяч в падении,то он отключает себя от надания,если еще и мяч отведеный,то нападать будет доигровщик,а центральный должен сместиться и закрывать его.</string>

    <string name="Di_Obz">Диагональный - игрок,который в команде отвечает за нападение,он нападает с любого мяча,самый большой процент передач за игру получает имеено диаганальный.В осном диаганальными играют те,у кого хорошее нападение,так же он должен владеть хорошей подачей.</string>
    <string name="Di_Nah">Диагональный нападет как с первой,так и со второй зоны,всегда заряжен и готов нападать.В основном силовое нападение,так же должен владеть ударом "по пальцам".</string>
    <string name="Di_Priem">Диагональный в приеме подачи не учавствует,он всегда готовится нападать.В защите он играет как связующий.</string>
    <string name="Di_Nap">Нападение это тот элемент игры,которым должен искусно владеть диаганальный.Обойти блок,скинуть,отыграться от блока,всем этим должен владеть диаганальный.Ведь он нападает больше всех в команде и должен выручать ее при любой,даже самой плохой передаче связующего.</string>
    <string name="Di_Block">Диагональный играет на блоке во второй зоне,блокируя вражеского доигровщика,по возможности помогает первому темпу.</string>

    <string name="L_Obz">Либеро - игрок,который отвечает за прием и игру в защите всей команды.Подсказывает и выстраивает защиту.Является основным принимающий и контролирует все мячи,которые отдают противники на его сторону.Так же он имеет другую форму,как вратарь в футболе.</string>
    <string name="L_Nah">Либеро играет только на задней линии,меняя центрального блокирующего,после того,как он подал подачу,и команда проиграла мяч.Играет в пятой зоне после приема подачи.</string>
    <string name="L_Priem">Либеро отвечает за прием и защиту команды,следовательно у него должен быть самый лучший прием и отличная игра в защите.Он отвечает за страховку "котла"(так называемого цетра площадки,самое незащищенное место),контролирует все перебросы и простые мячи,его обязаность принять все,что перелетает на его сторону.</string>
    <string name="L_Nap">Либеро не учавствует в нападении команды,ведь вместо него это делают центральные блокирующие,играющие на первой линии.</string>
    <string name="L_Block">Либеро так же не учавствует на блоке,ведь вместо него это делают центральные блокирующие,играющие на первой линии.</string>

    <string name="Button_Start">Начнем</string>



</resources>