<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_Pravila"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/Pra" />
        <item
            android:id="@+id/id_Sett"
            android:icon="@drawable/sett"
            android:title="@string/Setter" />
        <item
            android:id="@+id/id_Doi"
            android:icon="@drawable/li"
            android:title="@string/Doigr" />
        <item
            android:id="@+id/id_Centr"
            android:icon="@drawable/dia"
            android:title="@string/Centr" />
        <item
            android:id="@+id/id_Dia"
            android:icon="@drawable/dia"
            android:title="@string/Dia" />
        <item
            android:id="@+id/id_Lib"
            android:icon="@drawable/li"
            android:title="@string/Lib" />

    </group>
</menu>